# LinSCP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  debug-windows.yml  release.yml
_dev/: debug.md  run_gdb.sh
packaging/appimage/: AppRun  linscp.desktop
packaging/inno/: linscp.iss
packaging/nsis/: linscp.nsi
packaging/windows/: linscp.rc.in
src/: CMakeLists.txt  main.cpp  startup_log.h
src/core/: app_settings.cpp  app_settings.h  i_remote_file_system.cpp  i_remote_file_system.h
src/core/keys/: key_generator.cpp  key_generator.h  key_manager.cpp  key_manager.h  ppk_converter.cpp  ppk_converter.h
src/core/scp/: scp_client.cpp  scp_client.h
src/core/session/: path_state_store.cpp  path_state_store.h  session_logger.cpp  session_logger.h  session_manager.cpp  session_manager.h  session_profile.cpp  session_profile.h  session_store.cpp  session_store.h  winscp_importer.cpp  winscp_importer.h
src/core/sftp/: sftp_client.cpp  sftp_client.h  sftp_directory.cpp  sftp_directory.h  sftp_file.cpp  sftp_file.h  sftp_file_system.cpp  sftp_file_system.h
src/core/ssh/: known_hosts.cpp  known_hosts.h  ssh_auth.h  ssh_channel.cpp  ssh_channel.h  ssh_session.cpp  ssh_session.h
src/core/sync/: sync_comparator.cpp  sync_comparator.h  sync_engine.cpp  sync_engine.h  sync_profile.cpp  sync_profile.h  sync_profile_store.cpp  sync_profile_store.h
src/core/transfer/: transfer_item.cpp  transfer_item.h  transfer_manager.cpp  transfer_manager.h  transfer_queue.cpp  transfer_queue.h
src/core/webdav/: webdav_client.cpp  webdav_client.h  webdav_file_info.h  webdav_file_system.cpp  webdav_file_system.h
src/i18n/: linscp_ru.ts
src/models/: local_fs_model.cpp  local_fs_model.h  remote_fs_model.cpp  remote_fs_model.h  transfer_queue_model.cpp  transfer_queue_model.h
src/resources/: icons.qrc
src/ui/: connection_tab.cpp  connection_tab.h  main_window.cpp  main_window.h
src/ui/dialogs/: advanced_session_dialog.cpp  advanced_session_dialog.h  auth_dialog.cpp  auth_dialog.h  copy_dialog.cpp  copy_dialog.h  host_fingerprint_dialog.cpp  host_fingerprint_dialog.h  key_dialog.cpp  key_dialog.h  login_dialog.cpp  login_dialog.h  overwrite_dialog.cpp  overwrite_dialog.h  preferences_dialog.cpp  preferences_dialog.h  progress_dialog.cpp  progress_dialog.h  properties_dialog.cpp  properties_dialog.h  remote_editor_dialog.cpp  remote_editor_dialog.h  session_dialog.cpp  session_dialog.h  sync_dialog.cpp  sync_dialog.h  transfer_panel.cpp  transfer_panel.h
src/ui/panels/: file_panel.cpp  file_panel.h  local_panel.cpp  local_panel.h  remote_panel.cpp  remote_panel.h
src/ui/terminal/: terminal_widget.cpp  terminal_widget.h
src/ui/utils/: file_icon_provider.cpp  file_icon_provider.h  svg_icon.cpp  svg_icon.h
src/ui/widgets/: breadcrumb_bar.cpp  breadcrumb_bar.h  file_list_view.cpp  file_list_view.h  transfer_progress_widget.cpp  transfer_progress_widget.h
src/utils/: checksum.cpp  checksum.h  crypto_utils.cpp  crypto_utils.h  file_utils.cpp  file_utils.h
tests/: CMakeLists.txt
tests/unit/: test_crypto_utils.cpp  test_file_utils.cpp  test_sftp_file.cpp  test_sync_comparator.cpp  test_transfer_queue.cpp  test_transfer_resume.cpp
